overflow fix and index/manifest update

--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,7 @@
+.App {
+   overflow-x: hidden;
+}
+
 .header {
    padding: 20px 70px 40px 50px;
    border-bottom: 1px #999999 solid;
